28-04-2009
  * changes to the code to allow walking the xml-tree using "*" as a node name

27-04-2009
  * add xmlInitBuffer() for processing of a preallocated buffer
  * add xmlErrorGetColumnNo to get the column number of the syntax error
  * pass an error at a higher level to lower levels
  * detect a number of extra syntax errors

26-04-2009
  * add support for comments inside xml-tags, e.g.: <test><!-- --></test>

25-04-2009
  * add support for self-contained tags like <test/>
  * fix a problem if a file could not be mmaped
  * add a few comments which hopefully makes the code easier to understand
  * code cleanups

20-04-2009
  * fix a case where a single-element root path (e.g. "/printer") would not
    pass xmlNodeGetPath
  * fix a problem where attributes or elements starting with the same letter
    sequence could give a false negative result
  * Add a 'clear' attribute to the xmlErrorGet functions that indicates whether
    the error should be cleared or not
  * detect more xml syntax errors

18-04-2009
  * Make the code compiler correctly under windows
  * Introduce a root-node that can hold extra information which is necessary
    for thread safety under windows
  * Add xmlErrorGetString, xmlErrorGetLineNo for syntax error detetction
  * Add xmlErrGetNo for detection of, and clearing the last error

16-04-2009
  * Rename xmlGetNode functions to xmlNodeGet for better consistancy
  * likewise for xmlCopyNode en xmlCompareNode
  * add xmlAttributeGetDouble, xmlAttributeGetInt, xmlAttributeGetString
    xmlAttributeCopyString and xmlAttributeCompareString functions
  * fix some small bugs and problems along the way
  * add support for filtering on attribute value in xmlgrep

21-07-2008
  * change a number of function parameters to const where appropriate
  * fix a problem where the wrong node-name length was returned
  * xmlgrep now also works when only the -e options is specified
  * fix xmlgrep to show the correct node-name (it reported the parent